# docstation

docstation_linux/: Device.ini  README.md  StationConfig.linux.json  install.sh  pyproject.toml
docstation_linux/docs/: AMBA_WAIT_UNTIL_IMPORT_SLOT_V13.md  HUB_AWARE_IMPORT_SCHEDULER_V12.md  LINUX_PORT_V1.md  NATIVE_CONTINUOUS_OPERATOR_V11.md  NATIVE_FULLSCREEN_SLOTS_V8.md  NATIVE_GTK_APP_V3.md  NATIVE_GTK_APP_V4.md  NATIVE_GTK_APP_V5.md  NATIVE_GTK_APP_V6.md  NATIVE_IMPORT_DB_LOCK_V10.md  NATIVE_SLOT_PARITY_V9.md  SLOT_CALIBRATION_V2.md  SLOT_CALIBRATION_V7_AUTO.md
docstation_linux/docstation/: amba.py  config.py  db.py  entry.py  loggingx.py  main.py  native_app.py  runner.py  slots.py  storage.py  storage_slots.py  webapp.py
docstation_linux/scripts/: calibrate_slots.sh  calibrate_storage.sh  dry_run.sh  install_desktop_launcher.sh  install_ubuntu.sh  list_amba.sh  package_client.sh  reset_passwords.sh  run_app.sh  run_once.sh  run_web.sh  self_check.sh  show_slots.sh  show_storage.sh  test_amba_back.py  watch_usb_log.sh
docstation_linux/udev/: 99-docstation-ambarella.rules
