[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "docstation"
version = "1.0.0"
description = "DocStation — система скачивания видеорегистраторов"
requires-python = ">=3.10"
# GTK, pyusb и всё остальное — системные пакеты apt, не pip
# Указываем только то что реально ставится через pip
dependencies = []

[project.scripts]
# CLI: всё что было в scripts/*.sh
docstation          = "docstation.main:main"

# GUI: нативное GTK-приложение
docstation-app      = "docstation.entry:run_app"

# Служебные псевдонимы для удобства
docstation-web      = "docstation.entry:run_web"
docstation-once     = "docstation.entry:run_once"
docstation-dryrun   = "docstation.entry:run_dryrun"

[tool.setuptools.packages.find]
where = ["."]
include = ["docstation*"]

[tool.setuptools.package-data]
docstation = ["py.typed"]
